# hy-vent

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  input_output.rst  io.rst  misc.rst  plotting.rst  plotting_maps.rst  processing.rst  quality_control.rst
hy_vent/: __init__.py  module_io.py
hy_vent/tests/: test.py
hyvent/: __init__.py  class_profile.py  develop.py  fig_for_ChrisPaper.py  io.py  misc.py  plotting.py  plotting_maps.py  processing.py  quality_control.py  test.py  test2.py
hyvent/tests/: class_test.py
src/hy-vent/: __about__.py  develop.py  input_output.py  misc.py  plotting_maps.py  quality_control.py
src/hyvent/: __about__.py  __init__.py  develop.py  plotting.py  processing.py  quality_control.py
